# Cache

./: CMakeLists.txt  main.cpp
include/: cache.h
lfu_cache/: CMakeLists.txt  main.cpp  tests.cpp
lfu_cache/include/: lfu_cache.h  lfu_cache.hpp  test_interface.h  test_interface.hpp
lfu_cache/src/: lfu_cache.cpp  test_interface.cpp
pca_cache/: CMakeLists.txt  main.cpp  tests.cpp
pca_cache/include/: pca_cache.h  pca_cache.hpp  test_interface.h  test_interface.hpp
pca_cache/src/: pca_cache.cpp  test_interface.cpp
src/: cache.cpp
tests/: test1.txt  test3.txt  test_gen.py
